{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 29,
  "lineage": "fe66ba27-6b67-429a-67ed-45633d957688",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-27T08:22:11.679-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gemini-psc-demo/global/firewalls/allow-icmp-gemini-vpc-net",
            "log_config": [],
            "name": "allow-icmp-gemini-vpc-net",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "params": [],
            "priority": 1000,
            "project": "gemini-psc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/firewalls/allow-icmp-gemini-vpc-net",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-27T08:22:11.704-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gemini-psc-demo/global/firewalls/allow-ssh-gemini-vpc-net",
            "log_config": [],
            "name": "allow-ssh-gemini-vpc-net",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "params": [],
            "priority": 1000,
            "project": "gemini-psc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/firewalls/allow-ssh-gemini-vpc-net",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.10.100.250",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-27T10:02:12.718-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gemini-psc-demo/global/addresses/gemini-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gemini-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "prefix_length": 0,
            "project": "gemini-psc-demo",
            "purpose": "PRIVATE_SERVICE_CONNECT",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/addresses/gemini-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 5005070532914963790,
            "id": "projects/gemini-psc-demo/global/forwardingRules/pscgemini",
            "ip_address": "10.10.100.250",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "pscgemini",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "project": "gemini-psc-demo",
            "psc_connection_id": "45586392206173434",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/forwardingRules/pscgemini",
            "service_directory_registrations": [
              {
                "namespace": "goog-psc-gemini-vpc-net-9152819711651347191",
                "service_directory_region": "us-central1"
              }
            ],
            "target": "all-apis"
          },
          "dependencies": [
            "google_compute_global_address.default",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/zones/us-east1-b/disks/cli-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2025-07-27T08:36:48.759-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gemini-psc-demo/zones/us-east1-b/instances/cli-vm",
            "instance_id": "1183109312368343423",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "xs_NJsMOU5M=",
            "metadata_startup_script": "sudo apt-get update\n",
            "name": "cli-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
                "network_ip": "192.168.100.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/regions/us-east1/subnetworks/vm1-subnet",
                "subnetwork_project": "gemini-psc-demo"
              }
            ],
            "project": "gemini-psc-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/zones/us-east1-b/instances/cli-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-icmp",
              "allow-ssh"
            ],
            "tags_fingerprint": "1uwowv8t7A4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/zones/us-east1-b/disks/monitor-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "creation_timestamp": "2025-07-27T08:36:49.022-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gemini-psc-demo/zones/us-east1-b/instances/monitor-vm",
            "instance_id": "3918793013637937535",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "36naFP0I-hE=",
            "metadata_startup_script": "sudo apt-get update\nsudo apt-get install python3 python3-dev python3-venv -y\nsudo apt-get install tcpdump dnsutils -y\n",
            "name": "monitor-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
                "network_ip": "192.168.100.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/regions/us-east1/subnetworks/vm1-subnet",
                "subnetwork_project": "gemini-psc-demo"
              }
            ],
            "project": "gemini-psc-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/zones/us-east1-b/instances/monitor-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-icmp",
              "allow-ssh"
            ],
            "tags_fingerprint": "1uwowv8t7A4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "mtu": 1460,
            "name": "gemini-vpc-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "9152819711651347191",
            "numeric_id": "9152819711651347191",
            "project": "gemini-psc-demo",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-07-27T08:36:46.805-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gemini-psc-demo/regions/us-east1/routers/outbound-nat",
            "name": "outbound-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "project": "gemini-psc-demo",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/regions/us-east1/routers/outbound-nat"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gemini-psc-demo/us-east1/outbound-nat/outbound-gw",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "outbound-gw",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gemini-psc-demo",
            "region": "us-east1",
            "router": "outbound-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-27T08:22:11.982-07:00",
            "enable_flow_logs": false,
            "gateway_address": "192.168.100.1",
            "id": "projects/gemini-psc-demo/regions/us-east1/subnetworks/vm1-subnet",
            "ip_cidr_range": "192.168.100.0/24",
            "name": "vm1-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/global/networks/gemini-vpc-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gemini-psc-demo",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gemini-psc-demo/regions/us-east1/subnetworks/vm1-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2236463923046644428
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}